--- a/HTML/basic-of-html.html
+++ b/HTML/basic-of-html.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <title>Document</title>
+    </head>
 
-<body>
-
-</body>
+    <body>
+        <h1>가장 큰 제목</h1>
+        <h2>제목 2</h2>
+        <h3>제목 3</h3>
+        <h4>제목 4</h4>
+        <h5>제목 5</h5>
+        <h6>제목 6</h6>
+        <b>볼드 글자</b>
+        <br>
+        <strong>볼드 글자 + 의미상 강조</strong>
+        <br>
+        <i>이탈릭 체</i>
+        <br>
+        <em>이탈릭 체 + 의미상 강조</em>
+        <br>
+        <small>작은 글씨</small>
+        <br>
+        <mark>글자 하이라이트</mark>
+        <br>
+        <del>가로줄 그어진 글자</del>
+        <br>
+        <ins>아래 강조 밑줄</ins>
+        <br>
+        <p>본문</p>
+        <br>
+        <p>다음줄로 들여쓰기는 <br>이렇게 합니다.</p>
+        <hr>
+        <a href="https://beatus.netlify.app">비터스 홍보 웹사이트</a>
+        <ul>
+            <li>apple</li>
+            <li>melon</li>
+            <li>orange</li>
+        </ul>
+        <ol>
+            <li>apple</li>
+            <li>melon</li>
+            <li>orange</li>
+        </ol>
+        <img src="images/html.png" alt="beatus">
+    </body>
 
 </html>
