--- a/Javascript/DAY06EX01/index.html
+++ b/Javascript/DAY06EX01/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- tailwindcss 설정 스크립트 -->
-    <script src="https://cdn.tailwindcss.com"></script>
-
+    <link rel="stylesheet" href="style.css">
     <title>Day 06 연습문제 01</title>
 </head>
 <body>
-    <div id="hello-box" class="bg-blue-600 m-4 p-4 text-center text-5xl text-white">Hello</div>
+    <div id="hello-box">Hello</div>
     <script src="app.js"></script>
 </body>
 </html>
