add DAY06EX02 answer

--- a/Javascript/DAY06EX02/index.html
+++ b/Javascript/DAY06EX02/index.html
@@ -7,6 +7,7 @@
     <title>Day 06 연습문제 2</title>
 </head>
 <body>
-    <h1>Hello Javascript window</h1>
+    <h1 id="h1-title">Hello Javascript window</h1>
+    <script src="app.js"></script>
 </body>
 </html>
