--- a/Javascript/DAY07EX04/index.html
+++ b/Javascript/DAY07EX04/index.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Day 7 연습과제 4</title>
 </head>
 
-<body>dd
-
+<body>
 </body>
 
 </html>
