--- a/Javascript/DAY09EX01/index.html
+++ b/Javascript/DAY09EX01/index.html
@@ -7,7 +7,7 @@
     <title>Day 9 연습과제 1</title>
 </head>
 <body>
-    <form id="todo-form">
+    <form>
         <input type="text" placeholder="이름을 입력하세요" required />
     </form>
 </body>
