day 9 ex 1 question 1

--- a/Javascript/DAY09EX01/index.html
+++ b/Javascript/DAY09EX01/index.html
@@ -7,8 +7,8 @@
     <title>Day 9 연습과제 1</title>
 </head>
 <body>
-    <form id="todo-form">
-        <input type="text" placeholder="이름을 입력하세요" required />
+    <form>
+        <input id="nameIn" type="text" placeholder="이름을 입력하세요" required />
     </form>
 </body>
 </html>
